--- a/DAO/DataAccess.csproj
+++ b/DAO/DataAccess.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Crud\" />
+    <Folder Include="Dao\" />
+    <Folder Include="Mappers\Interfaces\" />
+  </ItemGroup>
+
 </Project>
